--- a/src/gekko_qt/gekko_qt.vcxproj
+++ b/src/gekko_qt/gekko_qt.vcxproj
@@ -176,16 +176,20 @@
     <ClCompile Include="src\bootmanager.cpp" />
     <ClCompile Include="src\callstack.cpp" />
     <ClCompile Include="src\disasm.cpp" />
+    <ClCompile Include="src\gamelist.cpp" />
     <ClCompile Include="src\gekko_regs.cpp" />
     <ClCompile Include="src\hotkeys.cpp" />
     <ClCompile Include="src\image_info.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\path_list.cpp" />
     <ClCompile Include="src\ramview.cpp" />
+    <ClCompile Include="src\welcome_wizard.cpp" />
   </ItemGroup>
   <ItemGroup>
     <MOC Include="src\bootmanager.hxx" />
     <MOC Include="src\callstack.hxx" />
     <MOC Include="src\disasm.hxx" />
+    <MOC Include="src\gamelist.hxx" />
     <MOC Include="src\gekko_regs.hxx" />
     <MOC Include="src\hotkeys.hxx" />
     <MOC Include="src\image_info.hxx" />
@@ -195,7 +199,9 @@
       <QtKeywords Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</QtKeywords>
       <QtKeywords Condition="'$(Configuration)|$(Platform)'=='DebugFast|x64'">false</QtKeywords>
     </MOC>
+    <MOC Include="src\path_list.hxx" />
     <MOC Include="src\ramview.hxx" />
+    <MOC Include="src\welcome_wizard.hxx" />
   </ItemGroup>
   <ItemGroup>
     <UIC Include="src\callstack.ui" />
@@ -204,6 +210,7 @@
     <UIC Include="src\hotkeys.ui" />
     <UIC Include="src\image_info.ui" />
     <UIC Include="src\main.ui" />
+    <UIC Include="src\welcome_wizard.ui" />
   </ItemGroup>
   <ItemGroup>
     <MOC Include="..\..\externals\qhexedit\commands.h" />
