removed GL2 renderer from project... needed to be updated a lot

--- a/src/video_core/video_core.vcxproj
+++ b/src/video_core/video_core.vcxproj
@@ -30,8 +30,6 @@
     <ClCompile Include="src\bp_mem.cpp" />
     <ClCompile Include="src\cp_mem.cpp" />
     <ClCompile Include="src\fifo.cpp" />
-    <ClCompile Include="src\renderer_base.cpp" />
-    <ClCompile Include="src\renderer_gl2\renderer_gl2.cpp" />
     <ClCompile Include="src\renderer_gl3\renderer_gl3.cpp" />
     <ClCompile Include="src\vertex_loader.cpp" />
     <ClCompile Include="src\video_core.cpp" />
@@ -41,8 +39,8 @@
     <ClInclude Include="src\bp_mem.h" />
     <ClInclude Include="src\cp_mem.h" />
     <ClInclude Include="src\fifo.h" />
+    <ClInclude Include="src\gx_types.h" />
     <ClInclude Include="src\renderer_base.h" />
-    <ClInclude Include="src\renderer_gl2\renderer_gl2.h" />
     <ClInclude Include="src\renderer_gl3\renderer_gl3.h" />
     <ClInclude Include="src\vertex_loader.h" />
     <ClInclude Include="src\video_core.h" />
