updated vcprojs and filters for the moved emuwindow implementations

--- a/src/video_core/video_core.vcxproj.filters
+++ b/src/video_core/video_core.vcxproj.filters
@@ -10,6 +10,9 @@
     <ClCompile Include="src\renderer_gl3\renderer_gl3.cpp">
       <Filter>renderer_gl3</Filter>
     </ClCompile>
+    <ClCompile Include="src\renderer_gl3\shader_manager.cpp">
+      <Filter>renderer_gl3</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bp_mem.h" />
