--- a/src/video_core/video_core.vcxproj.filters
+++ b/src/video_core/video_core.vcxproj.filters
@@ -10,6 +10,9 @@
     <ClCompile Include="src\renderer_gl3\renderer_gl3.cpp">
       <Filter>renderer_gl3</Filter>
     </ClCompile>
+    <ClCompile Include="src\renderer_gl3\shader_manager.cpp">
+      <Filter>renderer_gl3</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bp_mem.h" />
@@ -21,6 +24,12 @@
     <ClInclude Include="src\video_core.h" />
     <ClInclude Include="src\xf_mem.h" />
     <ClInclude Include="src\renderer_gl3\renderer_gl3.h">
+      <Filter>renderer_gl3</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer_gl3\shader_base_types.h">
+      <Filter>renderer_gl3</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer_gl3\shader_manager.h">
       <Filter>renderer_gl3</Filter>
     </ClInclude>
   </ItemGroup>
