--- a/src/gekko/pcafe.vcxproj
+++ b/src/gekko/pcafe.vcxproj
@@ -30,7 +30,7 @@
     <ProjectGuid>{CE7D2C07-21CE-4590-81AB-2ADA88A2B85F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>emu_win32</RootNamespace>
-    <ProjectName>pcafe</ProjectName>
+    <ProjectName>gekko</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
