updated CMakeLists to be consistent with latest project file changes

--- a/src/gekko/CMakeLists.txt
+++ b/src/gekko/CMakeLists.txt
@@ -1,6 +1,7 @@
-set(SRCS	src/pcafe.cpp)
+set(SRCS	src/gekko.cpp
+            src/emuwindow/emuwindow_sdl.cpp)
 
-add_executable(pcafe ${SRCS})
-target_link_libraries(pcafe core video_core input_common common ${OPENGL_LIBRARIES} ${SDL_LIBRARY} rt GLEW ${GLFW_LIBRARIES})
+add_executable(gekko ${SRCS})
+target_link_libraries(gekko core video_core input_common common ${OPENGL_LIBRARIES} ${SDL_LIBRARY} rt GLEW ${GLFW_LIBRARIES})
 
-#install(TARGETS pcafe RUNTIME DESTINATION ${bindir})
+#install(TARGETS gekko RUNTIME DESTINATION ${bindir})
