added gekko.h to project file

--- a/src/gekko/gekko.vcxproj.filters
+++ b/src/gekko/gekko.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="src\emuwindow\emuwindow_glfw.cpp">
       <Filter>emuwindow</Filter>
     </ClCompile>
+    <ClCompile Include="src\gekko.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -17,6 +18,7 @@
     <ClInclude Include="src\emuwindow\emuwindow_glfw.h">
       <Filter>emuwindow</Filter>
     </ClInclude>
+    <ClInclude Include="src\gekko.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="gekko.rc" />
