--- a/vsprops/Externals.props
+++ b/vsprops/Externals.props
@@ -7,12 +7,14 @@
   <PropertyGroup />
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>$(ExternalsDir)glew-1.6.0\include;$(ExternalsDir)glfw-2.7.3\include;$(ExternalsDir)glm-0.9.3.1;$(ExternalsDir)libjpeg;$(ExternalsDir)qhexedit;$(ExternalsDir)rapidxml-1.13;$(ExternalsDir)sdl-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ExternalsDir)glew-1.6.0\include;$(ExternalsDir)glfw-3.0\include;$(ExternalsDir)glm-0.9.3.1;$(ExternalsDir)libjpeg;$(ExternalsDir)qhexedit;$(ExternalsDir)rapidxml-1.13;$(ExternalsDir)sdl-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>
+      </PreprocessorDefinitions>
     </ClCompile>
     <Lib />
     <Link>
-      <AdditionalLibraryDirectories>$(ExternalsDir)glew-1.6.0\lib$(PlatformArchitecture);$(ExternalsDir)glfw-2.7.3\lib-msvc100;$(ExternalsDir)libjpeg;$(ExternalsDir)sdl-2.0.0\lib\$(PlatformName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libjpeg.lib;GLFW.lib;opengl32.lib;glew32.lib;glu32.lib;SDL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ExternalsDir)glew-1.6.0\lib$(PlatformArchitecture);$(ExternalsDir)glfw-3.0\lib$(PlatformArchitecture);$(ExternalsDir)libjpeg;$(ExternalsDir)sdl-2.0.0\lib\$(PlatformName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libjpeg.lib;glfw.lib;opengl32.lib;glew32.lib;glu32.lib;SDL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ProjectReference />
   </ItemDefinitionGroup>
