--- a/src/core/core.vcxproj
+++ b/src/core/core.vcxproj
@@ -148,6 +148,11 @@
     </CustomBuildStep>
     <ClCompile />
     <ClCompile />
+    <ClCompile>
+      <FloatingPointModel>Fast</FloatingPointModel>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile />
