--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -14,7 +14,6 @@
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\types.h" />
     <ClInclude Include="src\log.h" />
-    <ClInclude Include="src\thread.h" />
     <ClInclude Include="src\timer.h" />
     <ClInclude Include="src\x86_utils.h" />
     <ClInclude Include="src\config.h" />
@@ -23,5 +22,8 @@
     <ClInclude Include="src\atomic.h" />
     <ClInclude Include="src\atomic_win32.h" />
     <ClInclude Include="src\atomic_gcc.h" />
+    <ClInclude Include="src\std_condition_variable.h" />
+    <ClInclude Include="src\std_mutex.h" />
+    <ClInclude Include="src\std_thread.h" />
   </ItemGroup>
 </Project>
