--- a/src/video_core/CMakeLists.txt
+++ b/src/video_core/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SRCS
             src/vertex_loader.cpp
             src/video_core.cpp
             src/xf_mem.cpp
+			src/renderer_gl3/raster_font.cpp
             src/renderer_gl3/renderer_gl3.cpp
             src/renderer_gl3/shader_manager.cpp)
 
