--- a/src/video_core/video_core.vcxproj.filters
+++ b/src/video_core/video_core.vcxproj.filters
@@ -16,6 +16,7 @@
     <ClCompile Include="src\renderer_gl3\raster_font.cpp">
       <Filter>renderer_gl3</Filter>
     </ClCompile>
+    <ClCompile Include="src\texture_decoder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bp_mem.h" />
@@ -39,6 +40,7 @@
       <Filter>renderer_gl3</Filter>
     </ClInclude>
     <ClInclude Include="src\fifo_player.h" />
+    <ClInclude Include="src\texture_decoder.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="renderer_gl3">
