Move keyboard input logic to EmuWindow implementation. Fixes Qt emu window input, probably breaks input for anything else.

--- a/src/input_common/CMakeLists.txt
+++ b/src/input_common/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(SRCS	src/input_common.cpp
-			src/sdl_keys/sdl_keys.cpp
+			src/keyboard_input/keyboard_input.cpp
 			src/sdl_joypads/sdl_joypads.cpp)
 
 add_library(input_common STATIC ${SRCS})
