--- a/src/video_core/video_core.vcxproj.filters
+++ b/src/video_core/video_core.vcxproj.filters
@@ -18,6 +18,7 @@
     </ClCompile>
     <ClCompile Include="src\texture_decoder.cpp" />
     <ClCompile Include="src\vertex_manager.cpp" />
+    <ClCompile Include="src\fifo_player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bp_mem.h" />
