added uniform_manager.cpp to CMakeLists for video_core

--- a/src/video_core/CMakeLists.txt
+++ b/src/video_core/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SRCS
             src/texture_decoder.cpp
             src/renderer_gl3/raster_font.cpp
             src/renderer_gl3/renderer_gl3.cpp
-            src/renderer_gl3/shader_manager.cpp)
+            src/renderer_gl3/shader_manager.cpp
+            src/renderer_gl3/uniform_manager.cpp)
 
 add_library(video_core STATIC ${SRCS})
