enabled preprocessor secure template overloads in VSprops

--- a/vsprops/Base.props
+++ b/vsprops/Base.props
@@ -15,6 +15,7 @@
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <AdditionalIncludeDirectories>$(SolutionDir)src\common\src;$(SolutionDir)src\input_common\src;$(SolutionDir)src\video_core\src;$(SolutionDir)src\core\src;$(SolutionDir)src\gekko\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES=1;_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT =1</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
