--- a/vsprops/Externals.props
+++ b/vsprops/Externals.props
@@ -16,7 +16,7 @@
     <Lib />
     <Link>
       <AdditionalLibraryDirectories>$(ExternalsDir)glew-1.6.0\lib$(PlatformArchitecture);$(ExternalsDir)glfw-3.0\lib$(PlatformArchitecture)\$(Configuration);$(ExternalsDir)libjpeg;$(ExternalsDir)sdl-2.0.0\lib\$(PlatformName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libjpeg.lib;glfw.lib;opengl32.lib;glew32.lib;glu32.lib;SDL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libjpeg.lib;glfw3.lib;opengl32.lib;glew32.lib;glu32.lib;SDL.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
     </Link>
