--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -25,5 +25,6 @@
     <ClInclude Include="src\std_condition_variable.h" />
     <ClInclude Include="src\std_mutex.h" />
     <ClInclude Include="src\std_thread.h" />
+    <ClInclude Include="src\hash_container.h" />
   </ItemGroup>
 </Project>
