--- a/src/video_core/CMakeLists.txt
+++ b/src/video_core/CMakeLists.txt
@@ -8,9 +8,11 @@ set(SRCS
             src/video_core.cpp
             src/xf_mem.cpp
             src/texture_decoder.cpp
+            src/texture_manager.cpp
             src/renderer_gl3/raster_font.cpp
             src/renderer_gl3/renderer_gl3.cpp
             src/renderer_gl3/shader_manager.cpp
+            src/renderer_gl3/texture_cache.cpp
             src/renderer_gl3/uniform_manager.cpp)
 
 add_library(video_core STATIC ${SRCS})
