--- a/src/video_core/video_core.vcxproj
+++ b/src/video_core/video_core.vcxproj
@@ -26,8 +26,10 @@
     <ClCompile Include="src\renderer_gl3\raster_font.cpp" />
     <ClCompile Include="src\renderer_gl3\renderer_gl3.cpp" />
     <ClCompile Include="src\renderer_gl3\shader_manager.cpp" />
+    <ClCompile Include="src\renderer_gl3\texture_cache.cpp" />
     <ClCompile Include="src\renderer_gl3\uniform_manager.cpp" />
     <ClCompile Include="src\texture_decoder.cpp" />
+    <ClCompile Include="src\texture_manager.cpp" />
     <ClCompile Include="src\vertex_loader.cpp" />
     <ClCompile Include="src\vertex_manager.cpp" />
     <ClCompile Include="src\video_core.cpp" />
@@ -43,8 +45,10 @@
     <ClInclude Include="src\renderer_gl3\raster_font.h" />
     <ClInclude Include="src\renderer_gl3\renderer_gl3.h" />
     <ClInclude Include="src\renderer_gl3\shader_manager.h" />
+    <ClInclude Include="src\renderer_gl3\texture_cache.h" />
     <ClInclude Include="src\renderer_gl3\uniform_manager.h" />
     <ClInclude Include="src\texture_decoder.h" />
+    <ClInclude Include="src\texture_manager.h" />
     <ClInclude Include="src\vertex_loader.h" />
     <ClInclude Include="src\vertex_manager.h" />
     <ClInclude Include="src\video_core.h" />
